test/bad/automatic/extension/array/compile_time/0002.lat
int main () {
  int[] a = new int[20];
  for(int b : a) int b;
  return 0;
}

     
